[package]
name = "keep_you_sheep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

macroquad = "0.3.24"
serde = {version = "1.0.137", features = ["derive"]}
serde_json = "1.0.81"

[profil.dev]
opt-level = 3
